# task-data-structures-compilation

./: CMakeLists.txt  main.cpp
source/graph/: adjacency_list_graph.h  adjacency_matrix_graph.h  edge.h  graph.h  vertex.h
source/program/: program.cpp  program.h
source/structures/deque/: deque.h
source/structures/list/: array_list.h  doubly_list.h  int_list.h  singly_list.h
source/structures/node/: node.h
source/structures/queue/: queue.h
source/structures/stacks/: stack.h
source/tree/: avl_tree.h  binary_search_tree.h  binary_tree.h  heap.h  red_black_tree.h  splay_tree.h
